<resources>
    <string name="app_name">Card Scores</string>
    <string name="continue_game">Continue Game</string>
    <string name="hand">Hand</string>
    <string name="minus">-</string>
    <string name="name">Name</string>
    <string name="new_game">New Game</string>
    <string name="one_set_one_run">1S 1R</string>
    <string name="one_set_two_runs">1S 2R</string>
    <string name="players">Players</string>
    <string name="placeholder">placeholder</string>
    <string name="plus">+</string>
    <string name="select_game">Select Game</string>
    <string name="start_game">Start The Game</string>
    <string name="three_runs">3R</string>
    <string name="three_sets">3S</string>
    <string name="total">Total</string>
    <string name="two_runs">2R</string>
    <string name="two_sets">2S</string>
    <string name="two_sets_one_run">2S 1R</string>
    <string name="view_saved_games">View Saved Games</string>
</resources>
