<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShanghaiRummyGame">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/ScoresTableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/TitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView">

        <TableRow
            android:id="@+id/HeaderRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/HandTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hand" />
        </TableRow>

        <TableRow
            android:id="@+id/TwoSetsRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/TwoSetsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_sets" />
        </TableRow>

        <TableRow
            android:id="@+id/OneSetOneRunRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/OneSetOneRunTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_set_one_run" />
        </TableRow>

        <TableRow
            android:id="@+id/TwoRunsRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/TwoRunsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_runs" />
        </TableRow>

        <TableRow
            android:id="@+id/ThreeSetsRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ThreeSetsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_sets" />
        </TableRow>

        <TableRow
            android:id="@+id/TwoSetsOneRunRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/TwoSetsOneRunTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_sets_one_run" />
        </TableRow>

        <TableRow
            android:id="@+id/OneSetTwoRunsRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/OneSetTwoRunsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_set_two_runs" />
        </TableRow>

        <TableRow
            android:id="@+id/ThreeRunsRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ThreeRunsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_runs" />
        </TableRow>

        <TableRow
            android:id="@+id/TotalRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/TotalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>