<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <TextView
        android:id="@+id/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/NewGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/new_game"
        app:layout_constraintEnd_toEndOf="@+id/TitleTextView"
        app:layout_constraintStart_toStartOf="@+id/TitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView" />

    <Button
        android:id="@+id/ContinueGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/continue_game"
        app:layout_constraintEnd_toEndOf="@+id/NewGameButton"
        app:layout_constraintStart_toStartOf="@+id/NewGameButton"
        app:layout_constraintTop_toBottomOf="@+id/NewGameButton" />

    <Button
        android:id="@+id/ViewSavedGamesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/view_saved_games"
        app:layout_constraintEnd_toEndOf="@+id/ContinueGameButton"
        app:layout_constraintStart_toStartOf="@+id/ContinueGameButton"
        app:layout_constraintTop_toBottomOf="@+id/ContinueGameButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
